@@ -8,3 +8,6 @@ The main new feature of this version is the Market class hierarchy.
 It provides a place for keeping all the market conventions specific
 to a market segment.
 
+- Added interface to IMM dates 
+- In Market, you can now bootstrap curves with ED Futures
+
